# src/routers/auth.js
@@ -12,16 +12,8 @@ import { registerUserSchema, loginUserSchema } from '../validation/auth.js';
 
 const authRouter = Router();
 
-authRouter.post(
-  '/register',
-  validateBody(registerUserSchema),
-  ctrlWrapper(registerController),
-);
-authRouter.post(
-  '/login',
-  validateBody(loginUserSchema),
-  ctrlWrapper(loginController),
-);
+authRouter.post('/register', validateBody(registerUserSchema), ctrlWrapper(registerController));
+authRouter.post('/login', validateBody(loginUserSchema), ctrlWrapper(loginController));
 authRouter.post('/refresh', ctrlWrapper(refreshSessionController));
 authRouter.post('/logout', ctrlWrapper(logoutController));
 export default authRouter;
